<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/centered_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/logoifbranco"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewLabelNota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_nota1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centered_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNota1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_digite_nota"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelNota1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewLabelNota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nota2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLabelNota1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_center"
        app:layout_constraintTop_toTopOf="@+id/textViewLabelNota1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNota2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_digite_nota2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_center"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelNota2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.slider.Slider
        android:id="@+id/sliderNota2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutNota2"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutNota2"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutNota2"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        android:stepSize="0.1"
        app:labelBehavior="visible"
        tools:value="6.0" />

    <!-- Barreira para posicionar o botão abaixo de ambos os inputs -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_inputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="inputLayoutNota1,inputLayoutNota2,sliderNota2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutResultadoMedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_media_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_inputs">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextResultadoMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:importantForAutofill="no"
            android:longClickable="false"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        <!-- Você pode adicionar tools:text="8.75" para visualização no editor -->

    </com.google.android.material.textfield.TextInputLayout>

       <Button
        android:id="@+id/buttonZerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zerar"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutResultadoMedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="146dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonZerar"
        app:srcCompat="@drawable/formula1" />

    <ImageView
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_center"
        app:layout_constraintTop_toBottomOf="@+id/buttonZerar"
        app:srcCompat="@drawable/legenda1" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
